[tool.poetry]
name = "hyperjazcap-python"
version = "0.1.0"
description = "The hyperjazcap Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jazcap53/hyperjazcap-python"
repository = "https://github.com/jazcap53/hyperjazcap-python"
keywords = ["hyperjazcap"]
authors = ["Andrew Jarcho <andrew.jarcho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
