[tool.poetry]
name = "hyperjazcap-python"
version = "0.1.0"
description = "The hyperjazcap Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jazcap53/hyperjazcap-python"
repository = "https://github.com/jazcap53/hyperjazcap-python"
keywords = ["hyperjazcap"]
authors = ["Andrew Jarcho <andrew.jarcho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyperjazcap-python = "hyperjazcap_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hyperjazcap_python"]

[tool.coverage.report]
show_missing = true
fail_under = 85
